<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.anirudhsaxena.calc.MainActivity">

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="152dp"
        android:onClick="onClickListener"
        android:text="@integer/button7"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:onClick="onClickListener"
        android:text="@integer/button8"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button7"
        app:layout_constraintLeft_toRightOf="@+id/button7"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onClickListener"
        android:text="@integer/button9"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button8"
        app:layout_constraintLeft_toRightOf="@+id/button8"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="119dp"
        android:onClick="onClickListener"
        android:text="@integer/button0"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:onClick="onClickListener"
        android:text="@integer/button1"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:onClick="onClickListener"
        android:text="@integer/button4"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:onClick="onClickListener"
        android:text="@string/button5"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/button8"
        app:layout_constraintRight_toRightOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickListener"
        android:text="@integer/button6"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
        app:layout_constraintLeft_toLeftOf="@+id/button9"
        app:layout_constraintRight_toRightOf="@+id/button9"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/buttonDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:onClick="onClickListener"
        android:text="@string/buttonDecimal"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/button5"
        app:layout_constraintRight_toRightOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:onClick="onClickListener"
        android:text="@integer/button3"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEqual"
        app:layout_constraintLeft_toLeftOf="@+id/button6"
        app:layout_constraintRight_toRightOf="@+id/button6"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:onClick="onClickListener"
        android:text="@integer/button2"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/button5"
        app:layout_constraintRight_toRightOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onEqual"
        android:text="@string/buttonEqual"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/button3"
        app:layout_constraintRight_toRightOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/buttonDecimal"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/buttonDiv"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:onClick="onClickSym"
        android:text="@string/buttonDiv"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/button9" />

    <Button
        android:id="@+id/buttonMul"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="6dp"
        android:onClick="onClickSym"
        android:text="@string/buttonMul"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/buttonDiv"
        app:layout_constraintRight_toRightOf="@+id/buttonDiv"
        app:layout_constraintTop_toBottomOf="@+id/buttonDiv"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/buttonSub"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="9dp"
        android:onClick="onClickSym"
        android:text="@string/buttonSub"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/buttonMul"
        app:layout_constraintRight_toRightOf="@+id/buttonMul"
        app:layout_constraintTop_toBottomOf="@+id/buttonMul"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:onClick="onClickSym"
        android:text="@string/buttonAdd"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEqual"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/buttonSub"
        app:layout_constraintRight_toRightOf="@+id/buttonSub"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onClickSym"
        android:text="@string/buttonClear"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/button0"
        app:layout_constraintRight_toRightOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button0"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="16dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="67dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="62dp"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="47dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/button7"
        app:layout_constraintRight_toRightOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />


</android.support.constraint.ConstraintLayout>
